--- a/app/index.html
+++ b/app/index.html
@@ -13,11 +13,113 @@
   <!-- endbuild -->
 </head>
 <body>
-
 <div class="container">
-  <div class="jumbotron">
-    <h1>w11k</h1>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="text-center">
+        <a href="http://www.w11k.com" target="_blank">
+          <img src="images/w11k_logo.png" class="w11k-logo">
+        </a>
+      </div>
+    </div>
   </div>
+
+  <div class="description">
+    our open source projects
+  </div>
+
+  <div class="row">
+    <div class="col-md-7">
+      <a href="https://github.com/w11k/w11k-select" target="_blank">
+        <div class="box-blue">
+          <div class="row">
+            <div class="col-sm-3">
+              <img src="images/AngularJS-Shield-medium.png">
+            </div>
+            <div class="col-sm-9">
+              <div class="title">w11k-select</div>
+              Single- and Multi-Select Directive for AngularJS
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-7 col-md-offset-5">
+      <a href="https://github.com/w11k/w11k-dropdownToggle" target="_blank">
+        <div class="box-orange">
+          <div class="row">
+            <div class="col-sm-3">
+              <img src="images/AngularJS-Shield-medium.png">
+            </div>
+            <div class="col-sm-9">
+              <div class="title">w11k-dropdownToggle</div>
+              Advanced AngularJS Directive for Bootstrap Dropdowns
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-7">
+      <a href="https://github.com/w11k/fabs" target="_blank">
+        <div class="box-lightblue">
+          <div class="row">
+            <div class="col-sm-3">
+              <i class="fa fa-wrench fa-5x"></i>
+            </div>
+            <div class="col-sm-9">
+              <div class="title">fabs</div>
+              Fabulous AngularJS Build System
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-7 col-md-offset-5">
+      <a href="http://w11k.github.io/lsql/" target="_blank">
+        <div class="box-purple">
+          <div class="row">
+            <div class="col-sm-3">
+              <i class="fa fa-archive fa-5x"></i>
+
+            </div>
+            <div class="col-sm-9">
+              <div class="title">LSql</div>
+              Literate SQL - A Java Database Library
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-7">
+      <a href="https://github.com/w11k/webrcp" target="_blank">
+        <div class="box-red">
+          <div class="row">
+            <div class="col-sm-4">
+              <img src="images/eclipse_logo_colour.png">
+            </div>
+            <div class="col-sm-8">
+              <div class="title">WebRCP</div>
+              Webstart for Eclipse RCP
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+
 </div>
 
 <!-- build:js scripts/main.js -->
