--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,6 @@
   <title></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <link rel="stylesheet" href="styles/main.css">
   <!-- build:js scripts/vendor/modernizr.js -->
   <script src="bower_components/modernizr/modernizr.js"></script>
@@ -30,7 +29,7 @@
   </div>
 
   <div class="row">
-    <div class="col-md-7">
+    <div class="col-md-8 col-md-offset-2">
       <a href="https://github.com/w11k/w11k-select" target="_blank">
         <div class="box-blue">
           <div class="row">
@@ -48,7 +47,7 @@
   </div>
 
   <div class="row">
-    <div class="col-md-7 col-md-offset-5">
+    <div class="col-md-8 col-md-offset-2">
       <a href="https://github.com/w11k/w11k-dropdownToggle" target="_blank">
         <div class="box-orange">
           <div class="row">
@@ -66,9 +65,27 @@
   </div>
 
   <div class="row">
-    <div class="col-md-7">
-      <a href="https://github.com/w11k/fabs" target="_blank">
+    <div class="col-md-8 col-md-offset-2">
+      <a href="https://github.com/w11k/w11k-flash" target="_blank">
         <div class="box-lightblue">
+          <div class="row">
+            <div class="col-sm-3">
+              <img src="images/flash.png">
+            </div>
+            <div class="col-sm-9">
+              <div class="title">w11k-flash</div>
+              AngularJS flash/flex integration module
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <a href="https://github.com/w11k/fabs" target="_blank">
+        <div class="box-purple">
           <div class="row">
             <div class="col-sm-3">
               <i class="fa fa-wrench fa-5x"></i>
@@ -84,9 +101,9 @@
   </div>
 
   <div class="row">
-    <div class="col-md-7 col-md-offset-5">
+    <div class="col-md-8 col-md-offset-2">
       <a href="http://w11k.github.io/lsql/" target="_blank">
-        <div class="box-purple">
+        <div class="box-red">
           <div class="row">
             <div class="col-sm-3">
               <i class="fa fa-archive fa-5x"></i>
@@ -103,9 +120,9 @@
   </div>
 
   <div class="row">
-    <div class="col-md-7">
+    <div class="col-md-8 col-md-offset-2">
       <a href="https://github.com/w11k/webrcp" target="_blank">
-        <div class="box-red">
+        <div class="box-blue">
           <div class="row">
             <div class="col-sm-4">
               <img src="images/eclipse_logo_colour.png">
@@ -113,6 +130,24 @@
             <div class="col-sm-8">
               <div class="title">WebRCP</div>
               Webstart for Eclipse RCP
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <a href="https://github.com/w11k/eclipselauncherx" target="_blank">
+        <div class="box-orange">
+          <div class="row">
+            <div class="col-sm-4">
+              <img src="images/eclipse_logo_colour.png">
+            </div>
+            <div class="col-sm-8">
+              <div class="title">EclipseLauncherX</div>
+              Launcher utility for different Eclipse versions
             </div>
           </div>
         </div>
