"Calendar for Trello" und "w11k-hicharts" hinzugefügt.

--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,24 @@
 
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
+      <a href="http://calendar-for-trello.com/" target="_blank">
+        <div class="box-trello">
+          <div class="row">
+            <div class="col-sm-4">
+              <img src="images/trello-logo-blue.png">
+            </div>
+            <div class="col-sm-8">
+              <div class="title">Calendar for Trello</div>
+              <i>Calendar for Trello</i> allows you to organize all cards of all your boards in one calendar.
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
       <a href="https://github.com/w11k/w11k-select" target="_blank">
         <div class="box-blue">
           <div class="row">
@@ -57,6 +75,24 @@
             <div class="col-sm-9">
               <div class="title">w11k-dropdownToggle</div>
               Advanced AngularJS Directive for Bootstrap Dropdowns
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <a href="https://github.com/w11k/w11k-highcharts" target="_blank">
+        <div class="box-purple">
+          <div class="row">
+            <div class="col-sm-3">
+              <img src="images/AngularJS-Shield-medium.png">
+            </div>
+            <div class="col-sm-9">
+              <div class="title">w11k-highcharts</div>
+              AngularJS Directive for the Highcharts and Highstock charting library.
             </div>
           </div>
         </div>
